# leetcode-all-languages

./: .gitignore  CMakeLists.txt  Cargo.toml  Package.resolved  Package.swift  README.md  go.mod  leetcode16ways.csproj  leetcode16ways.sln  main.c  tsconfig.json
Sources/: README.md
Sources/SwiftLeetCode/: SwiftContainsDuplicate.swift  SwiftTwoSum.swift  SwiftValidAnagram.swift
performance_results/: bar_chart_builder.py  contains_duplicate_results.py  svg.py  two_sum_results.py  valid_anagram_results.py
src/: main.rs
src/containsduplicate/: CSharpContainsDuplicate.cs  DartContainsDuplicate.dart  ElixirContainsDuplicate.ex  ErlangContainsDuplicate.erl  JavaContainsDuplicate.java  JavaFunctionalContainsDuplicate.java  JavaScriptContainsDuplicate.js  KotlinContainsDuplicate.kt  PhpContainsDuplicate.php  ScalaContainsDuplicate.scala  SwiftContainsDuplicate.swift  TypeScriptContainsDuplicate.ts  c_contains_duplicate.c  cpp_contains_duplicate.cpp  go_contains_duplicate.go  mod.rs  racket_contains_duplicate.rkt  rust_contains_duplicate.rs
src/ruby/: README.md  ruby_contains_duplicate.rb  ruby_two_sum.rb  ruby_valid_anagram.rb
src/twosum/: CSharpTwoSum.cs  DartTwoSum.dart  ElixirTwoSum.ex  ErlangTwoSum.erl  JavaScriptTwoSum.js  JavaTwoSum.java  KotlinFunctionalTwoSum.kt  KotlinTailrecTwoSum.kt  KotlinTwoSum.kt  PhpTwoSum.php  ScalaTwoSum.scala  SwiftTwoSum.swift  TwoSum.java  TwoSum.py  TwoSumScala.scala  TypeScriptTwoSum.js  TypeScriptTwoSum.ts  c_two_sum.c  c_two_sum_loop.c  cpp_two_sum.cpp  mod.rs  (+8 more)
twosum/: TwoSumScala.scala  two_sum_function.rs  two_sum_method.rb
(+16 files in other folders)
